--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="me.retrodaredevil.solarthing.android">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android:persistent"/>
 
     <application
             android:allowBackup="true"
