--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="me.retrodaredevil.solarthing.android">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="me.retrodaredevil.solarthing.android">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android:persistent"/>
+    <uses-permission android:name="android:RECEIVE_BOOT_COMPLETED"/>
 
     <application
             android:allowBackup="true"
@@ -10,7 +13,8 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -18,7 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <service android:name=".PersistentService" />
+        <service android:name=".PersistentService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"
+            />
     </application>
 
 </manifest>
