--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <service android:name=".PersistentService"
+        <service android:name=".service.PersistentService"
                  android:permission="android.permission.BIND_JOB_SERVICE"
                  android:enabled="true"
                  android:exported="true"
