--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
 
     <application
             android:allowBackup="true"
@@ -55,14 +54,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-        <!--<receiver-->
-                <!--android:name=".NetworkChangeReceiver">-->
-            <!--<intent-filter>-->
-                <!--&lt;!&ndash;<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />&ndash;&gt;-->
-                <!--<action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>-->
-                <!--<action android:name="android.net.wifi.STATE_CHANGED"/>-->
-            <!--</intent-filter>-->
-        <!--</receiver>-->
 
         <activity android:name=".MainActivity">
             <intent-filter>
