--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    sourceSets.main.java.filter.exclude 'META-INF/**/*'
     lintOptions {
         // I have to do this for the CouchDB library that is being used. It requires an old version of httpclient which conflicts with new classes or something...
         checkReleaseBuilds false
@@ -55,7 +56,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.github.wildmountainfarms:solarthing:v2.4.1'
+
+    implementation 'com.github.wildmountainfarms.solarthing:core:v2.5.3'
 
     // https://mvnrepository.com/artifact/org.lightcouch/lightcouch
     implementation 'org.lightcouch:lightcouch:0.2.0'
