--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
                 android:name="org.apache.http.legacy"
                 android:required="false"/>
 
+<!--    TODO think about using ACTION_USER_UNLOCKED to try and start the service. This comes before BOOT_COMPLETED and doesn't require directBootAware    -->
         <receiver
                 android:name=".BootReceiver"
                 android:directBootAware="true"
