--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.github.wildmountainfarms.solarthing:core:2.6.1'
+    def solarthingVersion = "v2.6.2"
+
+//    implementation "com.github.wildmountainfarms:solarthing:$solarthingVersion"
+    implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
 
     // https://mvnrepository.com/artifact/org.lightcouch/lightcouch
     implementation 'org.lightcouch:lightcouch:0.2.0'
