--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,19 +58,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-//    def solarthingVersion = "3.0.0"
-    def solarthingVersion = "cfe1f09952"
+    def solarthingVersion = "v3.0.2"
 
-//    implementation "com.github.wildmountainfarms:solarthing:$solarthingVersion"
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
 
-//    api 'org.ektorp:org.ektorp-android:1.5.0'
     // https://mvnrepository.com/artifact/org.ektorp/org.ektorp.android
     implementation group: 'org.ektorp', name: 'org.ektorp.android', version: '1.5.0'
-
-    // https://mvnrepository.com/artifact/org.lightcouch/lightcouch
-//    implementation 'org.lightcouch:lightcouch:0.2.0'
-
 
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
