--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.android.support:multidex:2.0.1'
     implementation "com.mikepenz:materialdrawer:${lastestMaterialDrawerRelease}"
 
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
