--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,12 @@ dependencies {
 
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
 
+    def jacksonVersion = "2.10.2"
+    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
+    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion"
+
     // https://mvnrepository.com/artifact/org.ektorp/org.ektorp.android
     implementation group: 'org.ektorp', name: 'org.ektorp.android', version: '1.5.0'
 
