--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ repositories {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:multidex:2.0.1'
+    //noinspection GradleDependency
     implementation "com.mikepenz:materialdrawer:$materialDrawerVersion"
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
@@ -71,8 +72,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    def solarthingVersion = "3.7.0"
-    // sometimes you have to include the 'v' and sometimes you don't...
+    def solarthingVersion = "3.7.1"
 
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
 
