Added wearos module and fixed not saving default config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('/home/josh/.android/debug.keystore')
+        }
+    }
     sourceSets.main.java.filter.exclude 'META-INF/**/*'
     compileSdkVersion 29
     lintOptions {
@@ -85,4 +90,5 @@ dependencies {
     // https://mvnrepository.com/artifact/org.ektorp/org.ektorp.android
     implementation group: 'org.ektorp', name: 'org.ektorp.android', version: '1.5.0'
 
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
 }
