--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,6 +73,10 @@
                 android:enabled="true"
                 android:exported="true"
                 android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <meta-data
+                android:name="com.google.android.gms.version"
+                android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
