--- a/wearos/build.gradle
+++ b/wearos/build.gradle
@@ -3,11 +3,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    signingConfigs {
-        debug {
-            storeFile file('/home/josh/.android/debug.keystore')
-        }
-    }
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
@@ -27,6 +22,7 @@ android {
 }
 
 dependencies {
+    api project(':common')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.support:wearable:2.7.0'
