Added battery temperature complication

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'kotlin-android-extensions'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    api 'com.google.android.gms:play-services-wearable:17.0.0'
 }
 
 sourceCompatibility = "7"
