--- a/wearos/src/main/AndroidManifest.xml
+++ b/wearos/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
             android:name=".SolarThingWearApplication"
             android:allowBackup="true"
+            android:fullBackupContent="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
@@ -17,11 +18,7 @@
                 android:name="com.google.android.wearable"
                 android:required="true" />
 
-        <!--
-               Set to true if your app is Standalone, that is, it does not require the handheld
-               app to run.
-        -->
-<!--        <meta-data android:name="com.google.android.wearable.standalone" android:value="false" />-->
+        <meta-data android:name="com.google.android.wearable.standalone" android:value="false" />
 
         <activity
                 android:name=".WearDisplayActivity"
@@ -34,6 +31,7 @@
         </activity>
 
         <service
+                android:icon="@drawable/charging"
                 android:name=".BatteryVoltageComplicationProviderService"
                 android:label="@string/complication_battery_voltage"
                 android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
@@ -48,12 +46,29 @@
 
             <meta-data
                     android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
-                    android:value="0"/>
+                    android:value="300"/>
+        </service>
+        <service
+                android:name=".BatteryTemperatureComplicationProviderService"
+                android:icon="@drawable/battery"
+                android:label="@string/complication_battery_temperature"
+                android:permission="com.google.android.wearable.permission.BIND_COMPLICATION_PROVIDER">
+            <intent-filter>
+                <action android:name="android.support.wearable.complications.ACTION_COMPLICATION_UPDATE_REQUEST"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.support.wearable.complications.SUPPORTED_TYPES"
+                    android:value="SHORT_TEXT"/>
+
+            <meta-data
+                    android:name="android.support.wearable.complications.UPDATE_PERIOD_SECONDS"
+                    android:value="300"/>
         </service>
         <service android:name=".DataListener">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data android:scheme="wear" android:host="*" android:path="/battery" />
+                <data android:scheme="wear" android:host="*" android:path="/basic-solar" />
             </intent-filter>
         </service>
 
