--- a/.editorconfig
+++ b/.editorconfig
@@ -18,3 +18,12 @@ ij_continuation_indent_size = 8
 
 [{*.java, *.kt}]
 max_line_length = 180
+
+[*.kt]
+ij_kotlin_continuation_indent_in_supertype_lists = true
+ij_kotlin_continuation_indent_in_parameter_lists = true
+ij_kotlin_continuation_indent_for_expression_bodies = true
+ij_kotlin_continuation_indent_for_chained_calls = true
+ij_kotlin_continuation_indent_in_if_conditions = true
+ij_kotlin_continuation_indent_in_argument_lists = true
+ij_kotlin_continuation_indent_in_elvis = true
