Commented some prints, added heartbeat signal to wear os communication

--- a/wearos/src/main/AndroidManifest.xml
+++ b/wearos/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
                 <data android:scheme="wear" android:host="*" android:path="/basic-solar" />
+                <data android:scheme="wear" android:host="*" android:path="/heartbeat" />
             </intent-filter>
         </service>
 
