--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
         exclude 'META-INF/ASL2.0'
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+//        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -106,5 +106,5 @@ dependencies {
     // https://mvnrepository.com/artifact/org.ektorp/org.ektorp.android
     implementation group: 'org.ektorp', name: 'org.ektorp.android', version: '1.5.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+//    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
 }
