--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
         exclude 'META-INF/ASL2.0'
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
+//        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -105,5 +105,5 @@ dependencies {
     // https://mvnrepository.com/artifact/org.ektorp/org.ektorp.android
     implementation group: 'org.ektorp', name: 'org.ektorp.android', version: '1.5.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
+//    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 }
