Added main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,13 +63,16 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".activity.ConnectionSettingsActivity" android:launchMode="singleTask">
+        <activity android:name=".activity.MainActivity" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+                android:name=".activity.ConnectionSettingsActivity"
+                android:launchMode="singleTask" />
         <activity
                 android:name=".activity.SolarSettingsActivity"
                 android:launchMode="singleTask" />
