--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ apply plugin: 'kotlin-android'
 
 android {
     sourceSets.main.java.filter.exclude 'META-INF/**/*'
-    compileSdkVersion 29
+    compileSdkVersion 30
     lintOptions {
         abortOnError false
     }
     defaultConfig {
         multiDexEnabled true
         applicationId "me.retrodaredevil.solarthing.android"
-        minSdkVersion 19
-        targetSdkVersion 29
+        minSdkVersion 26
+        targetSdkVersion 30
         versionCode 340
         versionName "1.34"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -66,7 +66,7 @@ android {
     }
 }
 repositories {
-    jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
@@ -81,7 +81,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -95,7 +95,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 //    def solarthingVersion = "3.10.1"
-    def solarthingVersion = "a82121da410922612c196ac1ec8cf9e87eb21457".substring(0, 10)
+    def solarthingVersion = "6118671ef4228741d29b16a87c93ff7977e38b7a".substring(0, 10)
 
     //noinspection GradleDependency // Since we use pre-releases, we don't need Android Studio warning us about this
     implementation "com.github.wildmountainfarms.solarthing:core:$solarthingVersion"
